force-app/main/default/objects/Fee__c/fields/Act__c.field-meta.xml
<CustomField>
    <fullName>Act__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check the active checkbox, if the fee is currently in use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>