force-app/main/default/objects/Fee__c/fields/ED__c.field-meta.xml
<CustomField>
    <fullName>ED__c</fullName>
    <inlineHelpText>Fee Schedule End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>