force-app/main/default/objects/Fee__c/fields/SD__c.field-meta.xml
<CustomField>
    <fullName>SD__c</fullName>
    <inlineHelpText>Fee Schedule Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>