force-app/main/default/objects/Fee__c/fields/Tnr__c.field-meta.xml
<CustomField>
    <fullName>Tnr__c</fullName>
    <formula>TEXT(MONTH( ED__c )+(12*(YEAR(ED__c)-YEAR( SD__c )))-MONTH(SD__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field gets auto computed into months, from start and end date field.</inlineHelpText>
    <label>Tenure</label>
    <type>Text</type>
</CustomField>