force-app/main/default/objects/Fee__c/fields/Ty__c.field-meta.xml
<CustomField>
    <fullName>Ty__c</fullName>
    <inlineHelpText>Select the type of fee for the investment made</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Variable</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Hybrid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>